--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -632,9 +632,6 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PanelScreen.hpp">
       <Filter>Header Files\GUI\Screens</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\AreaNavigation.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\components\ScrollRenderer_Console.hpp">
       <Filter>Header Files\GUI\Components</Filter>
     </ClInclude>
@@ -656,26 +653,29 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser.hpp">
       <Filter>Header Files\GUI</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\AreaNavigation.hpp">
+      <Filter>Header Files\GUI</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\GUI\Screens</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.hpp">
+      <Filter>Header Files\GUI\Screens</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PauseScreen_Console.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\GUI\Screens</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ProgressScreen_Console.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\GUI\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.hpp">
+      <Filter>Header Files\GUI\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.hpp">
+      <Filter>Header Files\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.hpp">
+      <Filter>Header Files\GUI\Screens\Inventory</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1183,26 +1183,26 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.cpp">
+      <Filter>Source Files\GUI\Screens</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\GUI\Screens</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PauseScreen_Console.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\GUI\Screens</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ProgressScreen_Console.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\GUI\Screens</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.cpp">
+      <Filter>Source Files\GUI\Screens</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.cpp">
+      <Filter>Source Files\GUI\Screens\Inventory</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
